--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Historical Maps & 3D Mapping</title>
+  <title>IDHMC 2017</title>
   <meta name="author" content="Alex Christie, Brock University.">
 
   <!-- Google Web Fonts. -->
@@ -26,12 +26,13 @@
 
 <div class="container">
 
-<div class="box" id="unit-1"><p class="box-unit">Presentation</p><p class="box-title" id="box-title-1">Historical Maps</p></div>
-<div class="box" id="unit-2"><p class="box-unit">Workshop</p><p class="box-title" id="box-title-2">3D Mapping</p></div>
-<div class="box" id="unit-3"><p class="box-unit">Discussion</p><p class="box-title" id="box-title-3">Prototpying Spaces</p></div>
+<a href="presentation/index.html"><div class="box" id="unit-1"><p class="box-unit">Presentation</p><p class="box-title" id="box-title-1">Historical Maps</p></div></a>
+<a href="https://axchristie.github.io/"><div class="box" id="unit-2"><p class="box-unit">Workshop</p><p class="box-title" id="box-title-2">3D Mapping</p></div></a>
+<a href="https://axchristie.github.io/"><div class="box" id="unit-3"><p class="box-unit">Discussion</p><p class="box-title" id="box-title-3">Prototpying Spaces</p></div></a>
 
 </div>
 
+<h2><a  href="https://axchristie.github.io/IDHMC/">axchristie.github.io/IDHMC</a></h2>
 <h2>Alex Christie, Brock University | <a href="mailto:achristie@brocku.ca">achristie@brocku.ca</a> | <a href="https://twitter.com/axchristie">@axchristie</a></h2>
 
 </div>
