add workshop materials

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container">
 
 <a href="presentation/index.html"><div class="box" id="unit-1"><p class="box-unit">Presentation</p><p class="box-title" id="box-title-1">Historical Maps</p></div></a>
-<a href="https://axchristie.github.io/"><div class="box" id="unit-2"><p class="box-unit">Workshop</p><p class="box-title" id="box-title-2">3D Mapping</p></div></a>
+<a href="workshop/index.html"><div class="box" id="unit-2"><p class="box-unit">Workshop</p><p class="box-title" id="box-title-2">3D Mapping</p></div></a>
 <a href="discussion/index.html"><div class="box" id="unit-3"><p class="box-unit">Discussion</p><p class="box-title" id="box-title-3">Prototpying Spaces</p></div></a>
 
 </div>
