--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </div>
 
-<h2><a  href="https://axchristie.github.io/UB/">axchristie.github.io/UB</a></h2>
+<h2><a  href="https://axchristie.github.io/UB2017/">axchristie.github.io/UB2017</a></h2>
 <h2>Alex Christie, Brock University | <a href="mailto:achristie@brocku.ca">achristie@brocku.ca</a> | <a href="https://twitter.com/axchristie">@axchristie</a></h2>
 
 </div>
