--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div class="container">
 
 <a href="prepare/index.html"><div class="box" id="unit-1"><p class="box-unit">Preparation</p><p class="box-title" id="box-title-1">Literature & Software</p></div></a>
-<a href="workshop/index.html"><div class="box" id="unit-2"><p class="box-unit">Workshop One</p><p class="box-title" id="box-title-2">3D Mapping</p></div></a>
-<a href="discuss/index.html"><div class="box" id="unit-3"><p class="box-unit">Workshop Two</p><p class="box-title" id="box-title-3">z-axis tool</p></div></a>
+<a href="workshop/index.html"><div class="box" id="unit-2"><p class="box-unit">Part One</p><p class="box-title" id="box-title-2">3D Mapping</p></div></a>
+<a href="discuss/index.html"><div class="box" id="unit-3"><p class="box-unit">Part Two</p><p class="box-title" id="box-title-3">z-axis tool</p></div></a>
 
 </div>
 
